[HT-585] Fixed underline on CTA links when they wrap to multiple lines

--- a/health/sass/components/call-to-action/_extends.scss
+++ b/health/sass/components/call-to-action/_extends.scss
@@ -8,6 +8,7 @@
 // Our overrides for call to action link.
 .uikit-cta-link {
   @extend .uikit-cta-link;
+  display: inline;
   margin-bottom: 0;
   font-size: 1.1em;
   @include uikit-media(sm) {
